--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+## Node.js dependencies
+node_modules
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
+## Production
 /build
 
-# misc
-.DS_Store
+## misc
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +16,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+## OSX
+.DS_Store
