--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "wishingfish_react",
+  "name": "wishingfish.cards",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^3.0.0",
+    "react-fade-in": "^0.1.6",
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
